--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "@types/node-fetch": "^2.6.2"
   },
   "dependencies": {
+    "commander": "^11.0.0",
     "node-fetch": "^3.3.0"
   },
   "type": "module",
